// Copyright (c) 2020-2021 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTContactItem";
option optimize_for = LITE_RUNTIME;

import public "ContactEnums.proto";

message ContactItem
{
    optional uint32 version = 1;
    optional string id = 2;						// contact item id
    optional ContactItemType type = 3;			// see ContactEnums.proto
    optional string value = 4;
    optional sint64 start = 5;
    optional sint64 end = 6;
    repeated ContactItemAttribute attribute = 7;// see ContactEnums.proto
    optional string subtype = 8;
}
